--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -110,7 +110,7 @@
                                 <th>Nome</th>
                                 <th>Tipo</th>
                                 <th>Instituição</th>
-                                <th>Equilíbrio</th>
+                                <th>Saldo</th>
                                 <th>Moeda</th>
                                 <th>Última sincronização</th>
                                 <th>Ações</th>
